# template-repo

./: .agents.yaml  .agents.yaml.example  .claudeignore  .dockerignore  .env.example  .flake8  .git-push-reminder.txt  .gitattributes  .gitignore  .markdown-link-check.json  .mcp.json  .mcp.json.full  .mypy-skip.txt  .pre-commit-config.yaml  .pylintrc  .review_history  .secrets.yaml  .yamllint.yml  AGENTS.md  AGENT_MIGRATION_PLAN.md  CGT-TASK.md  CGT-VALIDATOR-COMPLETE.md  CLAUDE.md  CLAUDE_EXPRESSION.md  CONTRIBUTING.md  CRUSH.md  GAEA2_CRITICAL_FIXES.md  GAEA2_FAILING_NODES_ANALYSIS.md  GAEA2_FINDINGS_SUMMARY.md  GAEA2_NODE_PROPERTY_REFERENCE.md  GAEA2_PROPERTY_COMBINATIONS.md  GAEA2_PROPERTY_LIMITATION_FIX.md  GAEA2_REGRESSION_ANALYSIS.md  GAEA2_TEST_FILES_SUMMARY.md  GAEA2_VALIDATION_COMPLETE.md  GAEA2_VALIDATION_SUMMARY.md  GEMINI.md  GEMINI_EXPRESSION.md  GEMINI_GIST_UPDATE_REPORT.md  GEMINI_IMPROVEMENTS.md  (+254 more)
cgt-validator/: .env.example  .flake8  .gitignore  .yamllint.yml  DEVELOPMENT.md  DOCKER_AND_CI_SUMMARY.md  Dockerfile  Dockerfile.advanced  Dockerfile.scheduler  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  OREGON_CGT_IMPLEMENTATION_SUMMARY_2025_08_05.md  OREGON_CGT_VALIDATOR_REVIEW_2025_08_05.md  PRE_COMMIT_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README-STANDALONE.md  README.md  REQUIREMENTS-STRUCTURE.md  STANDALONE-SETUP.md  TEST_OUTPUT_EXPLANATION.md  VALIDATION_EXPLANATION.md  cgt-linting-report.txt  cgt-validate.bat.deprecated  cgt-validate.sh.deprecated  create_valid_test_data.py  docker-compose.override.yml  docker-compose.yml  install.bat.deprecated  install.sh  install.sh.deprecated  pyproject.toml  pytest.ini  requirements-cgt.txt  requirements-core.txt  requirements-dev.txt  requirements-parser.txt  requirements.txt  (+6 more)
cgt-validator/.github/workflows/: cgt-ci.yml  ci.yml  dependencies.yml  release.yml  scheduled-scraping.yml  scrape-requirements.yml
cgt-validator/docker/: scheduler-entrypoint.sh
cgt-validator/docs/: DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  REFINEMENTS_SUMMARY.md  TEMPLATE_MONITORING.md  installation.md  troubleshooting.md  user_guide.md
cgt-validator/docs/states/: oregon_cgt1_2025_learnings.md  oregon_cgt1_2025_spec.yaml  oregon_cgt1_2025_template_guide.md  oregon_cgt1_quick_reference.md  oregon_updates_2025_08_05.md
cgt-validator/mock_data/oregon/: oregon_2025_submission.xlsx  oregon_2025_submission_fail.xlsx  test_invalid_data.xlsx  test_new_rules.xlsx  test_submission.xlsx  test_submission_valid.xlsx  test_truly_valid.xlsx  test_valid_data.xlsx
cgt-validator/monitoring/oregon/: change_history.json  monitoring_summary_20250806_163026.json  monitoring_summary_20250806_164658.json  template_snapshots.json
cgt-validator/scripts/: check-validator-tests.sh  check_critical_changes.py  install-pre-commit.sh.deprecated  monitor_templates.py  setup_cron.sh.deprecated  setup_windows_scheduler.ps1  validate-mock-data.py
cgt-validator/src/: __init__.py  cli.py
cgt-validator/src/config/: states_config.py
cgt-validator/src/mock_data/: __init__.py  oregon_generator.py  oregon_generator_fixed.py
cgt-validator/src/parsers/: requirements_parser.py
cgt-validator/src/reporters/: excel_annotator.py  html_reporter.py  markdown_reporter.py  validation_results.py
cgt-validator/src/scrapers/: __init__.py  document_downloader.py  scheduler.py  template_monitor.py  web_scraper.py
cgt-validator/src/scripts/: __init__.py  check_critical_changes.py  monitor_templates.py  test_template_monitoring.py  validate-mock-data.py
cgt-validator/src/validators/: base_validator.py  oregon.py
cgt-validator/test_monitoring/oregon/: monitoring_config.json
cgt-validator/tests/: conftest.py  test_cli.py
cgt-validator/tests/parsers/: test_requirements_parser.py
cgt-validator/tests/reporters/: test_excel_annotator.py  test_html_reporter.py  test_markdown_reporter.py
cgt-validator/tests/scrapers/: test_template_monitor.py  test_web_scraper.py
cgt-validator/tests/validators/: test_base_validator.py  test_oregon_validator.py
databricks/wheels/dbr-env-all/: README.md  pyproject.toml
databricks/wheels/dbr-env-cloud/: README.md  pyproject.toml
databricks/wheels/dbr-env-core/: README.md  pyproject.toml
databricks/wheels/dbr-env-ml/: README.md  pyproject.toml
infra/aws/rust-runtime/: Cargo.toml  README.md  deny.toml
tools/mcp/mcp_agentcore_memory/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_ai_toolkit/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_bioforge/: Cargo.toml  README.md
tools/mcp/mcp_blender/: Cargo.toml  README.md  README_RUNNING.md  RUNNING_LOCALLY.md  pyproject.toml  quickstart.sh
tools/mcp/mcp_code_quality/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_comfyui/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_content_creation/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_core_rust/: Cargo.toml  README.md  deny.toml
tools/mcp/mcp_desktop_control/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_elevenlabs_speech/: Cargo.toml  README.md  pyproject.toml  verify_improvements.py  voice_mapping.py
tools/mcp/mcp_github_board/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_meme_generator/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_memory_explorer/: Cargo.toml  README.md  pyproject.toml  run.bat
tools/mcp/mcp_opencode/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_reaction_search/: Cargo.toml  Dockerfile  README.md  pyproject.toml
tools/mcp/mcp_video_editor/: Cargo.toml  README.md  pyproject.toml
tools/mcp/mcp_virtual_character/: ARCHITECTURE.md  AUDIO_TEST_README.md  Cargo.toml  README.md  audio_file_server.py  audio_helper.py  audio_helper_storage.py  audio_router.py  install_dependencies_simple.bat  pyproject.toml  quickstart.py  seamless_audio.py  seamless_audio_v2.py  storage_client.py  test_audio_devices.py  test_audio_routing_comprehensive.py  test_vlc_simple.py  validate_setup.py  windows_audio_fix.py
tools/rust/automation-cli/: Cargo.toml  README.md
(+2164 files in other folders)
