[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbr-env-cloud"
version = "1.0.0"
description = "Databricks Runtime cloud provider Python dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "DBR Environment Setup", email = "dbr@example.com"}
]
keywords = ["databricks", "runtime", "cloud", "aws", "azure", "gcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dbr15 = [
    "boto3==1.34.39",
    "botocore==1.34.39",
    "s3transfer==0.10.2",
    "azure-core==1.30.2",
    "azure-storage-blob==12.19.1",
    "azure-storage-file-datalake==12.14.0",
    "google-cloud-storage==2.17.0",
    "google-cloud-core==2.4.1",
    "google-auth==2.31.0",
    "google-api-core==2.18.0",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.7.1",
    "googleapis-common-protos==1.63.2",
]
dbr16 = [
    "boto3==1.34.69",
    "botocore==1.34.69",
    "s3transfer==0.10.2",
    "azure-core==1.31.0",
    "azure-storage-blob==12.23.0",
    "azure-storage-file-datalake==12.17.0",
    "google-cloud-storage==2.18.2",
    "google-cloud-core==2.4.1",
    "google-auth==2.35.0",
    "google-api-core==2.20.0",
    "google-crc32c==1.6.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.65.0",
]

[tool.setuptools.packages.find]
where = ["src"]
