[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbr-env-core"
version = "1.0.0"
description = "Databricks Runtime core Python dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "DBR Environment Setup", email = "dbr@example.com"}
]
keywords = ["databricks", "runtime", "environment", "dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dbr15 = [
    "pandas==1.5.3",
    "numpy==1.23.5",
    "pyarrow==14.0.1",
    "pyspark==3.5.0",
    "delta-spark==3.2.0",
    "databricks-sdk==0.20.0",
    "requests==2.31.0",
    "urllib3==1.26.16",
    "certifi==2023.7.22",
    "click==8.0.4",
    "packaging==23.2",
    "setuptools==68.0.0",
    "pip==23.2.1",
    "wheel==0.38.4",
    "six==1.16.0",
    "python-dateutil==2.8.2",
    "pytz==2022.7",
    "typing_extensions==4.10.0",
]
dbr16 = [
    "pandas==1.5.3",
    "numpy==1.26.4",
    "pyarrow==15.0.2",
    "pyspark==3.5.0",
    "delta-spark==3.2.0",
    "databricks-sdk==0.30.0",
    "requests==2.32.2",
    "urllib3==1.26.16",
    "certifi==2024.6.2",
    "click==8.1.7",
    "packaging==24.1",
    "setuptools==74.0.0",
    "pip==24.2",
    "wheel==0.43.0",
    "six==1.16.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "typing_extensions==4.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
