[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbr-env-ml"
version = "1.0.0"
description = "Databricks Runtime ML and data science Python dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "DBR Environment Setup", email = "dbr@example.com"}
]
keywords = ["databricks", "runtime", "ml", "machine-learning", "data-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dbr15 = [
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "statsmodels==0.14.0",
    "matplotlib==3.7.2",
    "seaborn==0.12.2",
    "plotly==5.9.0",
    "mlflow-skinny==2.11.4",
    "joblib==1.2.0",
    "threadpoolctl==2.2.0",
    "patsy==0.5.3",
    "contourpy==1.0.5",
    "cycler==0.11.0",
    "fonttools==4.25.0",
    "kiwisolver==1.4.4",
    "Pillow==9.4.0",
]
dbr16 = [
    "scikit-learn==1.4.2",
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    "mlflow-skinny==2.19.0",
    "joblib==1.4.2",
    "threadpoolctl==2.2.0",
    "patsy==0.5.6",
    "contourpy==1.2.0",
    "cycler==0.11.0",
    "fonttools==4.51.0",
    "kiwisolver==1.4.4",
    "pillow==10.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
