[package]
name = "mcp-agentcore-memory"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/template-repo"
authors = ["AndrewAltimit"]
description = "MCP server for AI agent memory using ChromaDB vector database"

[[bin]]
name = "mcp-agentcore-memory"
path = "src/main.rs"

[dependencies]
# MCP Core (path to sibling directory)
mcp-core = { path = "../mcp_core_rust/crates/mcp-core" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client for ChromaDB
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
sha2 = "0.10"
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
