[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_agentcore_memory"
version = "0.1.0"
description = "Multi-provider memory MCP server for AI agents"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# AWS AgentCore provider
agentcore = [
    "aiobotocore>=2.13.0",
    "aioboto3>=13.0.0",
    "boto3>=1.34.0",
]

# ChromaDB provider (self-hosted)
chromadb = [
    "chromadb>=0.4.0",
]

# All providers
all = [
    "mcp_agentcore_memory[agentcore,chromadb]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mcp-agentcore-memory = "mcp_agentcore_memory.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_agentcore_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
