[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ai-toolkit"
version = "2.0.0"
description = "AI Toolkit integration MCP server for LoRA training management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AndrewAltimit"},
]
keywords = ["mcp", "ai-toolkit", "lora", "training", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp-core>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=0.19.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/AndrewAltimit/template-repo"
"Bug Reports" = "https://github.com/AndrewAltimit/template-repo/issues"
"Source" = "https://github.com/AndrewAltimit/template-repo/tree/main/tools/mcp/mcp_ai_toolkit"
"Documentation" = "https://github.com/AndrewAltimit/template-repo/tree/main/tools/mcp/mcp_ai_toolkit/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_ai_toolkit"]

[tool.setuptools.package-data]
mcp_ai_toolkit = [
    "py.typed",
    "docs/*.md",
    "scripts/*.sh",
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["mcp_ai_toolkit", "mcp_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
