[package]
name = "mcp-bioforge"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/template-repo"
authors = ["AndrewAltimit"]
description = "MCP server for BioForge biological automation -- liquid handling, thermal control, imaging, and protocol management"

[[bin]]
name = "mcp-bioforge"
path = "src/main.rs"

[dependencies]
# MCP Core
mcp-core = { path = "../mcp_core_rust/crates/mcp-core" }

# BioForge library crates
bioforge-types = { path = "../../../packages/bioforge/crates/bioforge-types" }
bioforge-safety = { path = "../../../packages/bioforge/crates/bioforge-safety" }
bioforge-hal = { path = "../../../packages/bioforge/crates/bioforge-hal" }
bioforge-protocol = { path = "../../../packages/bioforge/crates/bioforge-protocol" }
bioforge-vision = { path = "../../../packages/bioforge/crates/bioforge-vision" }

# Async runtime
tokio = { version = "1.40", features = ["full", "process"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
