[package]
name = "mcp-content-creation"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/template-repo"
authors = ["AndrewAltimit"]
description = "MCP server for content creation - Manim animations and LaTeX compilation"

[[bin]]
name = "mcp-content-creation"
path = "src/main.rs"

[dependencies]
# MCP Core (path to sibling directory)
mcp-core = { path = "../mcp_core_rust/crates/mcp-core" }

# Async runtime
tokio = { version = "1.40", features = ["full", "process"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories and paths
dirs = "6.0"
tempfile = "3.10"

# Regex for parsing
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
