[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-desktop-control"
version = "1.0.0"
description = "Desktop Control MCP Server - Cross-platform desktop automation for Linux and Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AndrewAltimit"},
]
keywords = ["mcp", "desktop-control", "automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp-core>=1.0.0",
    "python-dotenv>=0.19.0",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
linux = [
    "pyautogui>=0.9.54",
]
windows = [
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "pywin32>=306",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pylint>=2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/AndrewAltimit/template-repo"
"Bug Reports" = "https://github.com/AndrewAltimit/template-repo/issues"
"Source" = "https://github.com/AndrewAltimit/template-repo/tree/main/tools/mcp/mcp_desktop_control"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_desktop_control", "mcp_desktop_control.backends"]

[tool.setuptools.package-data]
mcp_desktop_control = [
    "py.typed",
    "docs/*.md",
    "scripts/*.sh",
]

[tool.black]
line-length = 127
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["mcp_desktop_control", "mcp_core"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
