[package]
name = "mcp-elevenlabs-speech"
version = "2.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/template-repo"
authors = ["AndrewAltimit"]
description = "MCP server for ElevenLabs text-to-speech synthesis"

[[bin]]
name = "mcp-elevenlabs-speech"
path = "src/main.rs"

[dependencies]
# MCP Core (path to sibling directory)
mcp-core = { path = "../mcp_core_rust/crates/mcp-core" }

# Async runtime
tokio = { version = "1.40", features = ["full", "fs"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
dirs = "6.0"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
