[package]
name = "mcp-memory-explorer"
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AndrewAltimit/template-repo"
authors = ["AndrewAltimit"]
description = "MCP server for game memory exploration and reverse engineering (Windows)"

[[bin]]
name = "mcp-memory-explorer"
path = "src/main.rs"

[dependencies]
# MCP Core (path to sibling directory)
mcp-core = { path = "../mcp_core_rust/crates/mcp-core" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cross-platform process listing
sysinfo = "0.33"

# Windows process memory API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
